<resources>
    <string name="app_name">Employees App</string>
    <string name="btn_departments_txt">Company Departments</string>
    <string name="show_employees_btn_txt">Show Employees</string>
    <string name="send_btn">Send employees</string>
    <string name="increaseFont">Increase Font</string>
    <string name="dep_details">Department details</string>
    <string name="department_txt">Department:</string>
    <string name="employees_num_txt">Total employees:</string>
    <string name="btn_ok_txt">OK</string>
    <string name="dep_type">Department Type:</string>
    <string name="dep_local">Local</string>
    <string name="dep_remote">Remote</string>
    <string name="dep_parameters">Department parameters:</string>
    <string name="has_trainees_txt">has trainees</string>
    <string name="has_invalids_txt">has invalids</string>
    <string name="dep_id_txt">Department Id:</string>
    <string name="dep_name_txt">Name:</string>
    <string name="dep_add_txt">Add</string>
    <string name="add_dep_txt">+</string>
    <string name="btn_share">Share</string>
    <string name="btn_http_json">HTTP GET JSON</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_log_in_button">Login</string>
    <string name="auth_login_label">Username</string>
    <string name="auth_password_label">Password</string>
</resources>