<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeesListActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/employees_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/send_btn"
        android:onClick="onSendBtnClick"/>

    <Button
        android:id="@+id/fontBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/increaseFont"
        android:onClick="onFontBtnClick"/>

</LinearLayout>