<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_padding"
    tools:context=".DepartmentActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="398dp"
            android:layout_height="258dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_padding"
            android:scaleType="fitXY"
            android:src="@drawable/employees_small" />

        <TextView
            android:id="@+id/depIdImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/depNameImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="@dimen/default_padding"
            android:textSize="@dimen/default_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@id/depNameEdit"
            android:text="@string/department_txt"
            android:textSize="@dimen/default_text_size" />

        <EditText
            android:id="@+id/depNameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:labelFor="@id/totalEmployeesEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/employees_num_txt"
            android:textSize="@dimen/default_text_size" />

        <EditText
            android:id="@+id/totalEmployeesEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <TextView android:text="@string/dep_type"/>

            <RadioGroup>
                <RadioButton
                    android:id="@+id/localDepType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep_local" />
                <RadioButton
                    android:id="@+id/remoteDepType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dep_remote" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <TextView android:text="@string/dep_parameters"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/trainees_check_box"
                    android:text="@string/has_trainees_txt"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/invalids_check_box"
                    android:text="@string/has_invalids_txt"/>

            </LinearLayout>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok_txt"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/default_padding"
        android:textSize="@dimen/default_text_size"
        android:onClick="onOkBtnClick"/>
</LinearLayout>