<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".DepartmentActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="258dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/employees_small" />

    <TextView
        android:id="@+id/depIdImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dep Id"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/depNameImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dep name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/depNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/depNameEdit"
        android:text="@string/department_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/depNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/depNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/depNameText"
        app:layout_constraintTop_toTopOf="@+id/depNameText" />

    <TextView
        android:id="@+id/totalEmplText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/totalEmployeesEdit"
        android:text="@string/employees_num_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depNameEdit"
        app:layout_constraintWidth_percent="0.43" />

    <EditText
        android:id="@+id/totalEmployeesEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/totalEmplText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalEmplText"
        app:layout_constraintTop_toTopOf="@+id/totalEmplText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dep_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEmployeesEdit"
        app:layout_constraintWidth_percent="0.43" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4">

        <RadioButton
            android:id="@+id/localDepType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep_local" />

        <RadioButton
            android:id="@+id/remoteDepType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep_remote" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dep_parameters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintWidth_percent="0.43" />

    <CheckBox
        android:id="@+id/trainees_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/has_trainees_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/invalids_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/has_invalids_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/trainees_check_box" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:onClick="onOkBtnClick"
        android:text="@string/btn_ok_txt"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invalids_check_box" />

    <Button
        android:id="@+id/btnEmplList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onBtnEmployeesListClick"
        android:text="@string/show_employees_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invalids_check_box" />

</androidx.constraintlayout.widget.ConstraintLayout>